# telegram_bot_stars

./: .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yaml  env.example  pyproject.toml  ТЗ_Telegram.md
config/: settings_example.yaml
src/telegram_bot_stars/: __init__.py  runner.py
src/telegram_bot_stars/bot_logic/commands/: commands.py
src/telegram_bot_stars/bot_logic/handlers/: events.py  menu.py  simple.py
src/telegram_bot_stars/bot_logic/keyboards/: keyboards.py
src/telegram_bot_stars/bot_logic/schemas/: user_schemas.py
src/telegram_bot_stars/core/: config.py  run.py
src/telegram_bot_stars/infra/db/adapter/: postgre_adapter.py
src/telegram_bot_stars/infra/db/alembic/: env.py
src/telegram_bot_stars/infra/db/alembic/versions/: 2025_10_14_2110-964460427eb9_initial_migrations.py
src/telegram_bot_stars/infra/db/managers/: user_managers.py
src/telegram_bot_stars/infra/db/models/: __init__.py  category.py  product.py  user.py
src/telegram_bot_stars/infra/db/models/base/: base_model.py
src/telegram_bot_stars/infra/db/models/mixins/: model_mixins.py
src/telegram_bot_stars/infra/logger/: project_logger.py
src/telegram_bot_stars/infra/storage/adapter/: redis_adapter.py
src/telegram_bot_stars/infra/telegram/: bot_core.py
