[project]
name = "telegram-bot-stars"
version = "0.1.0"
description = "Test task"
readme = "README.md"
authors = [
    { name = "Roman Sh", email = "shabrovra@yandex.ru" }
]
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "dynaconf>=3.2.12",
    "redis>=6.4.0",
]

[project.scripts]
app = "telegram_bot_stars.runner:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.select = [
    "E", # PEP8 ошибки (например, отступы)
    "F", # Pyflakes (неиспользуемый код)
    "W", # Предупреждения
    "I", # Сортировка импортов
    "UP", # Современный Python (например, Union -> |)
]
line-length = 120
indent-width = 4

[dependency-groups]
lint = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
]


[tool.alembic]
script_location = "%(here)s/src/telegram_bot_stars/infra/db/alembic"
file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
prepend_sys_path = ["."]

[[tool.alembic.post_write_hooks]]
name = "ruff"
type = "exec"
executable = "uv"
options = "run ruff format REVISION_SCRIPT_FILENAME"
